Fix spacing at top of About page

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,7 +9,6 @@
 }
 
 .about-page-contents {
-  padding-top: 47px;
   width: 100%;
   height: 100%;
   max-width: 598px;
